new Feature navbar

--- a/Index.html
+++ b/Index.html
@@ -30,8 +30,24 @@
     <!-- background 1 -->
     <!-- Navbar   -->
     <div class="navbar">
-        
+      <div class="nav">
+        <p class="about">
+          <a href="#"><span>ABOUT</span></a>
+        </p>
+        <p class="Portofolio">
+          <a href="#"><span>PORTOFOLIO</span></a>
+        </p>
+        <p class="Experience">
+          <a href="#"><span>EXPERIENCE</span></a>
+        </p>
+      </div>
     </div>
     <!-- Navbar   -->
+
+    <!-- Info About -->
+        <div class="aboutInfo">
+            
+        </div>
+    <!-- Info About -->
   </body>
 </html>
