--- a/Index.html
+++ b/Index.html
@@ -23,11 +23,43 @@
           <span></span>
         </div>
         <div class="roundImg">
-          <span></span>
+          <span class="img"></span>
+          <!-- Contact Info -->
+          <div class="contactInfo">
+            <h1>Contact</h1>
+            <div class="sosmed">
+              <div class="row">
+                <div class="col">
+                  <span
+                    ><img src="/content/page1/instagram.png" alt="Instagram" /><a href="#"></a
+                  ></span>
+                </div>
+                <div class="col">
+                  <span
+                    ><img src="/content/page1/linkedin.png" alt="Linkedin" /><a href="#"></a
+                  ></span>
+                </div>
+              </div>
+              <div class="row" style="margin-top:10px ;">
+                <div class="col">
+                  <span
+                    ><img src="/content/page1/whatsapp.png" alt="Whatsapp" /><a href="#"></a
+                  ></span>
+                </div>
+                <div class="col">
+                  <span
+                    ><img src="/content/page1/gmail.png" alt="Gmail" /><a href="#"></a
+                  ></span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Contact Info -->
         </div>
       </div>
     </div>
     <!-- background 1 -->
+
     <!-- Navbar   -->
     <div class="navbar">
       <div class="nav">
@@ -45,9 +77,21 @@
     <!-- Navbar   -->
 
     <!-- Info About -->
-        <div class="aboutInfo">
-            
+    <div class="aboutInfo">
+      <div class="nama">
+        <h1>ZILIAN <br /><span>RIFALDO</span></h1>
+      </div>
+      <div class="profile">
+        <h2>PROFILE</h2>
+        <p>
+          asdasdasdasdasdasdasdasdasdasdasdasdas
+          asdasdasdasdasdasdasdassadasdasdasdasd sdasdasdasdasdasdasdasdasdasd
+        </p>
+        <div class="resume">
+          <span><a href="">DOWNLOAD</a></span>
         </div>
+      </div>
+    </div>
     <!-- Info About -->
   </body>
 </html>
