new update contact

--- a/Index.html
+++ b/Index.html
@@ -26,30 +26,22 @@
           <span class="img"></span>
           <!-- Contact Info -->
           <div class="contactInfo">
-            <h1>Contact</h1>
+            <h1>CONTACT</h1>
             <div class="sosmed">
               <div class="row">
                 <div class="col">
-                  <span
-                    ><img src="/content/page1/instagram.png" alt="Instagram" /><a href="#"></a
-                  ></span>
+                  <a href="https://www.instagram.com/zilian_r12/"><span><img src="/content/page1/instagram.png" alt="Instagram" />zilian_r12</span></a>
                 </div>
                 <div class="col">
-                  <span
-                    ><img src="/content/page1/linkedin.png" alt="Linkedin" /><a href="#"></a
-                  ></span>
+                  <a href="https://www.linkedin.com/in/zilianrifaldo/"><span><img src="/content/page1/linkedin.png" alt="Linkedin" />zilianrifaldo</span></a>
                 </div>
               </div>
-              <div class="row" style="margin-top:10px ;">
+              <div class="row lastrow" style="margin-top:10px ;">
                 <div class="col">
-                  <span
-                    ><img src="/content/page1/whatsapp.png" alt="Whatsapp" /><a href="#"></a
-                  ></span>
+                  <a href="https://wa.me/6282213460887"><span><img src="/content/page1/whatsapp.png" alt="Whatsapp" />+6282213460887</span></a>
                 </div>
                 <div class="col">
-                  <span
-                    ><img src="/content/page1/gmail.png" alt="Gmail" /><a href="#"></a
-                  ></span>
+                  <a href="mailto:zilianrifaldof@gmail.com"><span><img src="/content/page1/gmail.png" alt="Gmail" />zilianrifaldof@</span></a>
                 </div>
               </div>
             </div>
@@ -79,7 +71,7 @@
     <!-- Info About -->
     <div class="aboutInfo">
       <div class="nama">
-        <h1>ZILIAN <br /><span>RIFALDO</span></h1>
+        <h1>ZILIAN<br /><span>RIFALDO</span></h1>
       </div>
       <div class="profile">
         <h2>PROFILE</h2>
